--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "@types/firebase": "^2.4.32",
         "@types/node": "8.0.19",
         "angularfire2": "^5.0.0-rc.1",
         "cordova-ios": "^4.4.0",
@@ -34,6 +35,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-x-toast": "^2.6.0",
         "firebase": "^4.5.0",
         "install": "^0.10.1",
         "ionic-angular": "^3.7.1",
@@ -59,7 +61,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-x-toast": {}
         },
         "platforms": [
             "ios"
